--- a/compose.yml
+++ b/compose.yml
@@ -16,7 +16,7 @@ services:
     <<: *go
     command: run ./server.go
     ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
+      - ${PORT}:${PORT}
 
   gen:
     <<: *go
