--- a/compose.yml
+++ b/compose.yml
@@ -14,7 +14,7 @@ services:
 
   app:
     <<: *go
-    command: run ./server.go
+    command: run ./cmd/graph/main.go
     ports:
       - ${PORT}:${PORT}
 
